deploy: codeinstinct/InteractiveResumeSource@66e5bf4fe527806b8493da8becf49e437e14cfcc

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Interactive Resume - Rahul Bhatia</title>
-    <base href="/InteractiveResume/" />
+    <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="css/components.css" rel="stylesheet" />
+    <link href="css/components.css" rel="stylesheet" /> 
     <script type="text/javascript">
         (function (l) {
             if (l.search) {
